# DiFfRG

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  TEST_INSTRUCTIONS.md  build.sh  config  config_docker  third_party.txt  update_DiFfRG.sh
DiFfRG/: CMakeLists.txt
DiFfRG/cmake/: install_bundled.cmake  setup_build_system.cmake
DiFfRG/documentation/getting_started/: installation.md
DiFfRG/include/DiFfRG/common/: cuda_prefix.hh
DiFfRG/include/DiFfRG/common/quadrature/: diagonalization.hh  matsubara.hh  matsubara_quadrature.hh  quadrature.hh  quadrature_provider.hh
DiFfRG/include/DiFfRG/discretization/FEM/assembler/: common.hh  ldg.hh
DiFfRG/include/DiFfRG/discretization/common/: EoM.hh
DiFfRG/include/DiFfRG/discretization/variables/assembler/: variables.hh
DiFfRG/include/DiFfRG/physics/: regulators.hh  utils.hh
DiFfRG/include/DiFfRG/physics/integration/: integrator_4D_2ang_gpu.hh  integrator_angle_cpu.hh  integrator_angle_gpu.hh  integrator_angle_qmc.hh  integrator_constant.hh  integrator_cpu.hh  integrator_gpu.hh  integrator_qmc.hh
DiFfRG/include/DiFfRG/physics/integration_finiteT/: integrator_4D_finiteTq0_cpu.hh  integrator_4D_finiteTq0_gpu.hh  integrator_angle_finiteTq0_cpu.hh  integrator_angle_finiteTq0_gpu.hh  integrator_angle_finiteTx0_cpu.hh  integrator_angle_finiteTx0_gpu.hh  integrator_finiteTq0_cpu.hh  integrator_finiteTq0_gpu.hh  integrator_finiteTx0_cpu.hh  integrator_finiteTx0_gpu.hh
DiFfRG/src/: CMakeLists.txt
DiFfRG/src/DiFfRG/common/: utils.cc
DiFfRG/src/DiFfRG/common/quadrature/: matsubara.cu  quadrature.cu  quadrature_provider.cu
DiFfRG/tests/: CMakeLists.txt
DiFfRG/tests/common/: CMakeLists.txt  test_cpu_complex_autodiff.cc  test_logger.cc
DiFfRG/tests/common/quadrature/: CMakeLists.txt  test_matsubara.cc  test_quadrature_provider.cc
DiFfRG/tests/common/quadrature/notebooks/: Matsubara.nb
DiFfRG/tests/physics/: test_loop_integrals.cc
DiFfRG/tests/physics/integration/: integrator_4D_qmc.cc  integrator_4D_qmc.cu
DiFfRG/tests/physics/integration_finiteT/: integrator_4D_finiteTq0_cpu.cc  integrator_4D_finiteTq0_gpu.cu  integrator_4D_finiteTx0_cpu.cc  integrator_angle_finiteTq0_cpu.cc  integrator_angle_finiteTq0_gpu.cu  integrator_angle_finiteTx0_cpu.cc  integrator_finiteTq0_cpu.cc  integrator_finiteTq0_gpu.cu  integrator_finiteTx0_cpu.cc
Examples/FourFermi/: CMakeLists.txt  Diagramsqbqqbq.m  Four-Fermion.m  Four-Fermion.nb  parameter.json  phasediagram.ipynb
Examples/FourFermi/flows/: flows.cc  flows.hh
Examples/FourFermi/flows/qbqqbq/: lambda1.cu  lambda1.hh  lambda10.cu  lambda10.hh  lambda2.cu  lambda2.hh  lambda3.cu  lambda3.hh  lambda4.cu  lambda4.hh  lambda5.cu  lambda5.hh  lambda6.cu  lambda6.hh  lambda7.cu  lambda7.hh  lambda8.cu  lambda8.hh  lambda9.cu  lambda9.hh
Examples/ONfiniteT/: CMakeLists.txt  model.hh  phasediagram.ipynb  plot.ipynb
Examples/ONfiniteT/flows/: flows.cc  flows.hh
Examples/QuarkMesonLPAprime/: CMakeLists.txt  QuarkMesonLPAprime.nb  plot.ipynb
Examples/YangMills/Full/: Yang-Mills.ipynb  Yang-Mills.m  Yang-Mills.nb
Examples/YangMills/SP/: CMakeLists.txt  Yang-Mills.ipynb  Yang-Mills.m  Yang-Mills.nb
Examples/YangMills/SP/flows/AA/: ZA.kernel  m2A.kernel
Examples/bases/: FierzCompleteNf2Nc34D.m
Mathematica/DiFfRG/: CodeTools.m  CodeTools.nb  DiFfRG.m  DiFfRG.nb
dependencies/: CMakeLists.txt
